--- a/index.html
+++ b/index.html
@@ -48,17 +48,31 @@
 								<span class="image main"><img src="images/pic01.jpeg" alt="" /></span>
 								<p>Hey my name is Omar and I'm an aspiring Data Analyst with background in AWS. I feel like we're in the golden age of information gathering and usage and I want to be able to take part of this big push. Data analytics is all about patterns and how we can use these patterns and information to pursue a goal or work towards a solution; I can develop solutions through skills in Excel, Tableau and sharpened knowledge in Python, SQL, PowerPoint and data wrangling. 
 								Check out my <a href="#work">work</a>.</p>
-							
+								<p><b><a href="https://drive.google.com/file/d/1oDNnXjTaR63niFvhCjG_n0HoSC9H_dg9/view?usp=sharing">Resume</a></b></p>
 							</article>
 
 						<!-- Work -->
 							<article id="work">
 								<h2 class="major">Work</h2>
 								<span class="image main"><img src="images/pic02.jpg" alt="" /></span>
-								<p><a href="putlinkhere">Case Study - Lariat Rent-A-Car Profit Strategies</a><br>The case study on Lariat was designed around data from a fictional car company called Lariat. I was given an excel file which contained data about the car company; ranging from the details on each individual car, to rental sales made at each branch. I was then asked to create a data model that helped the decision maker to reach their business objective of increasing revenue and decreasing costs.</p>
-								<p><a href="putlinkhere">HR Compensation Tool (HRCT)</a><br>In the HR Compensation tool I created a dashboard to analyze performance at the job-title level for fictional job data. It would help the HR team easily understand the combined performance of Account Executives at levels 1, 2, and 3.
-								<br><a href="https://drive.google.com/open?id=1FLYI-wvdSW_LqoKj4QKt2OKnatusiOue">HRCT Powerpoint</a>
-								<br><a href="https://drive.google.com/open?id=1wW8GVFs75fRy9_HLtXQGwxiEW3KD6GmT">HRCT Recording</a></p>
+								<p><b>Lariat Rent-A-Car Profit Strategies:</b><br>The case study on Lariat was designed around data from a fictional car company called Lariat. I was given an excel file which contained data about the car company; ranging from the details on each individual car, to rental sales made at each branch. I was then asked to create a data model that helped the decision maker to reach their business objective of increasing revenue and decreasing costs.
+								<br><a href="https://drive.google.com/file/d/1QhTrlGYRZmggAwFx-o8LOORQhbvEKLqk/view?usp=sharing">Excel Data</a>
+								<br><a href="https://drive.google.com/file/d/1KIY40wsluThcDHvBY_I44a5G4RCcYGqF/view?usp=sharing">Presentation</a>
+								</p>
+								<p><b>Housing Price Factors:</b><br>In this scenario, I’m providing statistical analysis for an investment bank and asked to examine 79 factors that drive home prices, so the bank may understand how to allocate dollars earmarked for investment into mortgage-backed securities. This project focused on using excel and statistical analysis to produce hypotheses and perform t-test on the variables; after which two hypotheses were selected to do a presentation on.
+								<br><a href="https://drive.google.com/file/d/1wPHiOz6OzfzVfYD9RsYuim-euOqS9eTQ/view?usp=sharing">Excel Data</a>
+								<br><a href="https://drive.google.com/file/d/13FI4hnHAsxLmzVlBfIYGIwc4QE_TlgR6/view?usp=sharing">Presentation</a>
+								</p>
+								<p><b>Exploratory Data Analysis:Covid-19 vs State Min Wage:</b><br>Examined potential statistical relationships between Covid-19 and state minimum wage (2019), strongly emphasized Python to extract and manipulate data and use various Python libraries to analyze, visualize and perform statistical analysis on data
+								<br><a href="https://drive.google.com/file/d/1CbgdpYLpZguaysxMhZS5ypldCy_UoRth/view?usp=sharing">Jupyter Notebook</a>
+								<br><a href="https://drive.google.com/file/d/10iXVEWiJnorJoEBAKCvEdjSxm0YQH237/view?usp=sharing">Presentation</a>
+								</p>
+								<p><b>SuperStore Data Analysis::</b><br>Tableau focused project exploring the superstore dataset and representing various relationships through graphs and charts
+								<br><a href="https://public.tableau.com/profile/omar.blades#!/vizhome/ThinkfulSuperstore_15905009143570/ProfitbyRegionandCategory">Presentation</a>
+								</p>
+								<p><b>HR Compensation Tool (HRCT)</b><br>In the HR Compensation tool I created a dashboard to analyze performance at the job-title level for fictional job data. It would help the HR team easily understand the combined performance of Account Executives at levels 1, 2, and 3.
+								<br><a href="https://drive.google.com/open?id=1FLYI-wvdSW_LqoKj4QKt2OKnatusiOue">Powerpoint</a>
+								<br><a href="https://drive.google.com/open?id=1wW8GVFs75fRy9_HLtXQGwxiEW3KD6GmT">Recording</a></p>
 								<!--
 								Default outline for projects
 								<p>DESCRIBE PROJECT<br><a href="putlinkhere">PROJECT NAME 3</a></p>
