--- a/index.html
+++ b/index.html
@@ -55,19 +55,19 @@
 							<article id="work">
 								<h2 class="major">Work</h2>
 								<span class="image main"><img src="images/pic02.jpg" alt="" /></span>
-								<p><b>Lariat Rent-A-Car Profit Strategies:</b><br>The case study on Lariat was designed around data from a fictional car company called Lariat. I was given an excel file which contained data about the car company; ranging from the details on each individual car, to rental sales made at each branch. I was then asked to create a data model that helped the decision maker to reach their business objective of increasing revenue and decreasing costs.
+								<p><b>Lariat Rent-A-Car Profit Strategies</b><br>The case study on Lariat was designed around data from a fictional car company called Lariat. I was given an excel file which contained data about the car company; ranging from the details on each individual car, to rental sales made at each branch. I was then asked to create a data model that helped the decision maker to reach their business objective of increasing revenue and decreasing costs.
 								<br><a href="https://drive.google.com/file/d/1QhTrlGYRZmggAwFx-o8LOORQhbvEKLqk/view?usp=sharing">Excel Data</a>
 								<br><a href="https://drive.google.com/file/d/1KIY40wsluThcDHvBY_I44a5G4RCcYGqF/view?usp=sharing">Presentation</a>
 								</p>
-								<p><b>Housing Price Factors:</b><br>In this scenario, I’m providing statistical analysis for an investment bank and asked to examine 79 factors that drive home prices, so the bank may understand how to allocate dollars earmarked for investment into mortgage-backed securities. This project focused on using excel and statistical analysis to produce hypotheses and perform t-test on the variables; after which two hypotheses were selected to do a presentation on.
+								<p><b>Housing Price Factors</b><br>In this scenario, I’m providing statistical analysis for an investment bank and asked to examine 79 factors that drive home prices, so the bank may understand how to allocate dollars earmarked for investment into mortgage-backed securities. This project focused on using excel and statistical analysis to produce hypotheses and perform t-test on the variables; after which two hypotheses were selected to do a presentation on.
 								<br><a href="https://drive.google.com/file/d/1wPHiOz6OzfzVfYD9RsYuim-euOqS9eTQ/view?usp=sharing">Excel Data</a>
 								<br><a href="https://drive.google.com/file/d/13FI4hnHAsxLmzVlBfIYGIwc4QE_TlgR6/view?usp=sharing">Presentation</a>
 								</p>
-								<p><b>Exploratory Data Analysis:Covid-19 vs State Min Wage:</b><br>Examined potential statistical relationships between Covid-19 and state minimum wage (2019), strongly emphasized Python to extract and manipulate data and use various Python libraries to analyze, visualize and perform statistical analysis on data
+								<p><b>Exploratory Data Analysis:Covid-19 vs State Min Wage</b><br>Examined potential statistical relationships between Covid-19 and state minimum wage (2019), strongly emphasized Python to extract and manipulate data and use various Python libraries to analyze, visualize and perform statistical analysis on data
 								<br><a href="https://drive.google.com/file/d/1CbgdpYLpZguaysxMhZS5ypldCy_UoRth/view?usp=sharing">Jupyter Notebook</a>
 								<br><a href="https://drive.google.com/file/d/10iXVEWiJnorJoEBAKCvEdjSxm0YQH237/view?usp=sharing">Presentation</a>
 								</p>
-								<p><b>SuperStore Data Analysis::</b><br>Tableau focused project exploring the superstore dataset and representing various relationships through graphs and charts
+								<p><b>SuperStore Data Analysis</b><br>Tableau focused project exploring the superstore dataset and representing various relationships through graphs and charts
 								<br><a href="https://public.tableau.com/profile/omar.blades#!/vizhome/ThinkfulSuperstore_15905009143570/ProfitbyRegionandCategory">Presentation</a>
 								</p>
 								<p><b>HR Compensation Tool (HRCT)</b><br>In the HR Compensation tool I created a dashboard to analyze performance at the job-title level for fictional job data. It would help the HR team easily understand the combined performance of Account Executives at levels 1, 2, and 3.
