--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
 								<p><b>SuperStore Data Analysis</b><br>Tableau focused project exploring the superstore dataset and representing various relationships through graphs and charts
 								<br><a href="https://public.tableau.com/profile/omar.blades#!/vizhome/ThinkfulSuperstore_15905009143570/ProfitbyRegionandCategory">Presentation</a>
 								</p>
-								<p><b>HR Compensation Tool (HRCT)</b><br>In the HR Compensation tool I created a dashboard to analyze performance at the job-title level for fictional job data. It would help the HR team easily understand the combined performance of Account Executives at levels 1, 2, and 3.
+								<p><b>HR Compensation Tool</b><br>In the HR Compensation tool I created a dashboard to analyze performance at the job-title level for fictional job data. It would help the HR team easily understand the combined performance of Account Executives at levels 1, 2, and 3.
 								<br><a href="https://drive.google.com/open?id=1FLYI-wvdSW_LqoKj4QKt2OKnatusiOue">Powerpoint</a>
 								<br><a href="https://drive.google.com/open?id=1wW8GVFs75fRy9_HLtXQGwxiEW3KD6GmT">Recording</a></p>
 								<!--
