--- a/index.html
+++ b/index.html
@@ -46,33 +46,38 @@
 							<article id="intro">
 								<h2 class="major">Intro</h2>
 								<span class="image main"><img src="images/pic01.jpeg" alt="" /></span>
-								<p>Hey my name is Omar and I'm an aspiring Data Analyst with background in AWS. I feel like we're in the golden age of information gathering and usage and I want to be able to take part of this big push. Data analytics is all about patterns and how we can use these patterns and information to pursue a goal or work towards a solution; I can develop solutions through skills in Excel, Tableau and sharpened knowledge in Python, SQL, PowerPoint and data wrangling. 
+								<p>Hey my name is Omar and I'm a Data Analyst. We're in the golden age of information gathering and usage and I want to be able to take part of this big push. Data analytics is all about patterns and how we can use these patterns and information to pursue a goal or work towards a solution; I can develop solutions through skills in Excel, Tableau and sharpened knowledge in Python, SQL, PowerPoint and data wrangling. 
 								Check out my <a href="#work">work</a>.</p>
-								<p><b><a href="https://drive.google.com/file/d/1oDNnXjTaR63niFvhCjG_n0HoSC9H_dg9/view?usp=sharing">Resume</a></b></p>
+								<p><b><a href="https://drive.google.com/file/d/1qHSLlx-Cx4eDOYbz5PIMtye5IT7OBiJ9/view?usp=sharing">Resume</a></b></p>
 							</article>
 
 						<!-- Work -->
 							<article id="work">
 								<h2 class="major">Work</h2>
 								<span class="image main"><img src="images/pic02.jpg" alt="" /></span>
-								<p><b>Lariat Rent-A-Car Profit Strategies</b><br>The case study on Lariat was designed around data from a fictional car company called Lariat. I was given an excel file which contained data about the car company; ranging from the details on each individual car, to rental sales made at each branch. I was then asked to create a data model that helped the decision maker to reach their business objective of increasing revenue and decreasing costs.
+								<p><b>Lariat Rent-A-Car Profit Strategies:</b><br>The case study on Lariat was designed around data from a fictional car company called Lariat. I examined data through an excel file about the car company; ranging from the details on each individual car, to rental sales made at each branch. I then created a data model that could be used to help decision makers reach their business objectives of increasing revenue and decreasing costs.
 								<br><a href="https://drive.google.com/file/d/1QhTrlGYRZmggAwFx-o8LOORQhbvEKLqk/view?usp=sharing">Excel Data</a>
-								<br><a href="https://drive.google.com/file/d/1KIY40wsluThcDHvBY_I44a5G4RCcYGqF/view?usp=sharing">Presentation</a>
+								<br><a href="https://drive.google.com/file/d/1IIpg4qfM1mJFxNkhydnOe0YVqkmYG4MK/view?usp=sharing">Presentation</a>
 								</p>
-								<p><b>Housing Price Factors</b><br>In this scenario, I’m providing statistical analysis for an investment bank and asked to examine 79 factors that drive home prices, so the bank may understand how to allocate dollars earmarked for investment into mortgage-backed securities. This project focused on using excel and statistical analysis to produce hypotheses and perform t-test on the variables; after which two hypotheses were selected to do a presentation on.
+								<p><b>Housing Price Factors:</b><br>In this scenario, I’m providing statistical analysis for an investment bank and asked to examine 79 factors that drive home prices, so the bank may understand how to allocate dollars earmarked for investment into mortgage-backed securities. This project focused on using excel and statistical analysis to produce hypotheses and perform t-test on the variables; after which two hypotheses were selected to do a presentation on.
 								<br><a href="https://drive.google.com/file/d/1wPHiOz6OzfzVfYD9RsYuim-euOqS9eTQ/view?usp=sharing">Excel Data</a>
-								<br><a href="https://drive.google.com/file/d/13FI4hnHAsxLmzVlBfIYGIwc4QE_TlgR6/view?usp=sharing">Presentation</a>
+								<br><a href="https://drive.google.com/file/d/12RNiOHt7fz1Rhp3wV9D9O8MKup71xkV1/view?usp=sharing">Presentation</a>
 								</p>
-								<p><b>Exploratory Data Analysis:Covid-19 vs State Min Wage</b><br>Examined potential statistical relationships between Covid-19 and state minimum wage (2019), strongly emphasized Python to extract and manipulate data and use various Python libraries to analyze, visualize and perform statistical analysis on data
-								<br><a href="https://drive.google.com/file/d/1CbgdpYLpZguaysxMhZS5ypldCy_UoRth/view?usp=sharing">Jupyter Notebook</a>
-								<br><a href="https://drive.google.com/file/d/10iXVEWiJnorJoEBAKCvEdjSxm0YQH237/view?usp=sharing">Presentation</a>
+								<p><b>Exploratory Data Analysis:Covid-19 vs State Min Wage:</b>
+								<br>*In Progress*
+								<br>I Examined potential statistical relationships between Covid-19 and state minimum wage (2019). In this project data was extracted, visualized, and analyzed by leveraging the Python framework and associated libraries. The goal of this project is to convince businesses that pay minimum wage to offer better health care solutions to employees.
+								<br>
+								<a href="https://drive.google.com/file/d/1CbgdpYLpZguaysxMhZS5ypldCy_UoRth/view?usp=sharing">Jupyter Notebook</a>
+								<br><a href="https://drive.google.com/file/d/19nIteE80nGVH3xaYVWUWzTzYyTL6JLha/view?usp=sharing">Presentation</a>
 								</p>
-								<p><b>SuperStore Data Analysis</b><br>Tableau focused project exploring the superstore dataset and representing various relationships through graphs and charts
+								<p><b>SuperStore Data Analysis::</b><br>Tableau focused project exploring the superstore dataset and representing various relationships through graphs and charts.
 								<br><a href="https://public.tableau.com/profile/omar.blades#!/vizhome/ThinkfulSuperstore_15905009143570/ProfitbyRegionandCategory">Presentation</a>
 								</p>
-								<p><b>HR Compensation Tool</b><br>In the HR Compensation tool I created a dashboard to analyze performance at the job-title level for fictional job data. It would help the HR team easily understand the combined performance of Account Executives at levels 1, 2, and 3.
-								<br><a href="https://drive.google.com/open?id=1FLYI-wvdSW_LqoKj4QKt2OKnatusiOue">Powerpoint</a>
-								<br><a href="https://drive.google.com/open?id=1wW8GVFs75fRy9_HLtXQGwxiEW3KD6GmT">Recording</a></p>
+								<p><b>HR Compensation Tool (HRCT)</b><br>In the HR Compensation tool I created a dashboard to analyze performance at the job-title level for fictional job data. It would help the HR team easily understand the combined performance of Account Executives at levels 1, 2, and 3.
+								<br><a href="https://drive.google.com/open?id=1wW8GVFs75fRy9_HLtXQGwxiEW3KD6GmT">Recording</a>
+								<br>
+								<a href="https://drive.google.com/file/d/14h8t8aMF02JejBtkWD_5H_p-gnQtc6c4/view?usp=sharing">Powerpoint</a>
+								</p>
 								<!--
 								Default outline for projects
 								<p>DESCRIBE PROJECT<br><a href="putlinkhere">PROJECT NAME 3</a></p>
@@ -82,11 +87,12 @@
 						<!-- About -->
 							<article id="about">
 								<h2 class="major">About</h2>
-								<span class="image main"><img src="images/pic03.jpg" alt="" /></span>
-								<p>Aspiring Data Analyst with experience using Python, Excel, SQL and statistics to gain meaningful insights from a wide variety of data sources. Proficient in various skills in data visualization such as PowerPoint and Tableau, and data extraction, manipulation, cleaning, visualization, and analysis.
-								My goal is to help companies leverage their data with actionable data solutions to help my employer make informed business decisions and make effective recommendations.
-
-								My name is Omar Blades and my goal is to become a data analyst. I love data, information and problem solving and I've been developing my skills as a Data analyst through online course materials and project based learning. I feel that experience is the best teacher and though I may not have a formal education, I know that I can be a valuable asset to any team through my knowledge and experience. Currently enrolled in the Thinkful Data Analytics Immersion Program and I am also learning AWS cloud based computing. </p>
+								
+								<p>Aspiring Data Analyst with experience using statistics to gain meaningful insights from a wide variety of data sources. I love data, information and problem solving and I've been develping my skills as a Data Analyst through online course materials and project based learning. I feel that experience is the best teacher and though I may not have a formal education, I know that I can be a valuable asset to any team through my knowledge and experience. Currently pursing PCAP certification and learning AWS cloud solutions.
+								</p>
+								<h3 class="major">Career Goal</h3>
+								<p>My goal is to help companies leverage their data with actionable data solutions to help my employer make informed business decisions and make effective recommendations.
+								</p>
 							</article>
 
 						<!-- Contact -->
