--- a/index.html
+++ b/index.html
@@ -55,6 +55,11 @@
 							<article id="work">
 								<h2 class="major">Work</h2>
 								<span class="image main"><img src="images/pic02.jpg" alt="" /></span>
+								<p><b>Fountas and Pinnell Reading Proficiency Performance:</b><br>The Fountas and Pinnell benchmark assessment is a system that was designed to conceptualize and mesaure student progress in achieving reading mastery. For this project, I used sample data spanning two schools, and two grade levels; my goal was to analyze the data and present trends and findings to stake holders, so that they could visualize the information and make sure the schools were on track with their reading progress. 
+								<br><a href="https://drive.google.com/file/d/15bOj5hEo9Co7DHg37ejiAy7n0ruoHx3v/view?usp=sharing">Python File</a>
+								<br><a href="https://drive.google.com/file/d/16tQJUd2KSrC5nm11OwOxOC7E80_Ykvws/view?usp=sharing">Tableau FIle</a>
+								<br><a href="https://drive.google.com/file/d/1ZNb5HB6QuNs1O_D8uO8UD0I-qMi_l045/view?usp=sharing">Presentation</a>
+								<p>
 								<p><b>Lariat Rent-A-Car Profit Strategies:</b><br>The case study on Lariat was designed around data from a fictional car company called Lariat. I examined data through an excel file about the car company; ranging from the details on each individual car, to rental sales made at each branch. I then created a data model that could be used to help decision makers reach their business objectives of increasing revenue and decreasing costs.
 								<br><a href="https://drive.google.com/file/d/1QhTrlGYRZmggAwFx-o8LOORQhbvEKLqk/view?usp=sharing">Excel Data</a>
 								<br><a href="https://drive.google.com/file/d/1IIpg4qfM1mJFxNkhydnOe0YVqkmYG4MK/view?usp=sharing">Presentation</a>
